--- a/www/templates/sidebar.html
+++ b/www/templates/sidebar.html
@@ -22,6 +22,9 @@
         <ion-item menu-close href="#/app/aboutus">
           About Us
         </ion-item>
+        <ion-item menu-close href="#/app/favorites">
+          My Favorites
+        </ion-item>
         <ion-item menu-close href="#/app/menu">
           Menu
         </ion-item>
@@ -33,6 +36,9 @@
         </ion-item>
         <ion-item menu-close ng-click="login()">
           Login
+        </ion-item>
+        <ion-item menu-close ng-click="reserve()">
+          Reserve Table
         </ion-item>
       </ion-list>
     </ion-content>
